k8s/blog/code/deployment.yaml
## VARIABLES:
##  - ${CLOUDSQL_INSTANCE_CONNECTION_NAME}

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: code
  namespace: blog
  labels:
    app: ghost
    type: blog
    content: code
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  selector:
    matchLabels:
      app: ghost
      type: blog
      content: code
  template:
    metadata:
      name: code
      namespace: blog
      labels:
        app: ghost
        type: blog
        content: code
    spec:
      volumes:
      - name: cloudsql-secret
        secret:
          secretName: code-cloudsql-credentials
      - name: cloudsql
        emptyDir:
      - name: ghost-config
        configMap:
          name: code-ghost-config
      - name: ghost-content
        persistentVolumeClaim:
          # if using non-NFS-enabled deployment, remove the `-nfs` postfix
          claimName: code-content-nfs
      containers:
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        imagePullPolicy: IfNotPresent
        command: ["/cloud_sql_proxy",
                  "-instances=${CLOUDSQL_INSTANCE_CONNECTION_NAME}=tcp:3306",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 120m
            memory: 120Mi
        volumeMounts:
        - name: cloudsql-secret
          mountPath: /secrets/cloudsql
          readOnly: true
      - name: code
        image: ghost:1-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 2368
        resources:
          requests:
            cpu: 300m
            memory: 200Mi
          limits:
            cpu: 350m
            memory: 250Mi
        volumeMounts:
        - name: ghost-config
          mountPath: /var/lib/ghost/config.production.json
          subPath: config.production.json
        - name: ghost-content
          mountPath: /var/lib/ghost/content
